--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
-py4j==0.10.7
-pyspark==2.4.5
+alembic==1.4.1
+Click==7.0
+Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.1
+itsdangerous==1.1.0
+Jinja2==2.11.1
+Mako==1.1.2
+MarkupSafe==1.1.1
+psycopg2==2.8.4
+python-dateutil==2.8.1
+python-editor==1.0.4
+six==1.14.0
+SQLAlchemy==1.3.13
+Werkzeug==1.0.0
