--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ marshmallow==3.5.1
 marshmallow-sqlalchemy==0.22.3
 psycopg2==2.8.4
 python-dateutil==2.8.1
+python-dotenv==0.12.0
 python-editor==1.0.4
 six==1.14.0
 SQLAlchemy==1.3.13
