--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ Flask==1.1.1
 flask-marshmallow==0.11.0
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 Mako==1.1.2
