--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,7 @@ Mako==1.1.2
 MarkupSafe==1.1.1
 marshmallow==3.5.1
 marshmallow-sqlalchemy==0.22.3
-psycopg2==2.8.4
+psycopg2-binary==2.8.4
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 python-editor==1.0.4
