--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "humps": "^2.0.1",
     "lodash": "^4.17.15",
+    "oaf-react-router": "^2.1.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
