--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "minimist": "^1.2.3",
+    "acorn": "^7.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
