--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "acorn": "^7.1.1",
     "humps": "^2.0.1",
     "lodash": "^4.17.15",
+    "minimist": "^1.2.3",
+    "moment": "^2.24.0",
     "oaf-react-router": "^2.1.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -16,9 +19,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
-    "minimist": "^1.2.3",
-    "acorn": "^7.1.1"
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
