--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -7,7 +7,7 @@
       "**/node_modules/**"
     ],
     "headers": [
-      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
+      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "max-age=0, no-cache"}]}
     ],
     "rewrites": [
       {
