Renamed backend service.

--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -13,7 +13,7 @@
       {
         "source": "/api/**",
         "run":  {
-          "serviceId": "ccwatch-backend"
+          "serviceId": "poptracker-backend"
         }
       },
       {
